k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cmc-prod
  labels:
    environment: prod
